# pkrs

./: .gitignore  .gitmodules  Cargo.toml  config.example.yml
migrations/: 0.sql
src/: macros.rs  main.rs  models.rs
src/commands/: admin.rs  meta.rs  mod.rs  system.rs
