[package]
name = "pkrs"
version = "0.1.0"
authors = ["Julia DeMille <me@jdemille.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log4rs = { version = "1.0.0-alpha-2", default-features = false, features = [
    "console_appender",
    "pattern_encoder",
    "threshold_filter"
] }
log = "0.4"
clap = "3.0.0-beta.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "chrono",
    "tls"
] }
tokio = "0.2"
serenity = "0.9.0"
chrono = "0.4"
